--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -42,7 +42,7 @@
 		}
 	}
 }
-@media (max-width: 767px) {
+@media only screen and (max-width: 767px) {
 	.header {
 		&__logo {
 			width: 150px;
@@ -106,7 +106,7 @@
 		display: none;
 	} */
 }
-@media (max-width: 575px) {
+@media only screen and (max-width: 575px) {
 
 	.advantages {
 		&__descr {
