--- a/src/sass/blocks/_advantages.scss
+++ b/src/sass/blocks/_advantages.scss
@@ -2,12 +2,7 @@
 	min-height: 473px;
 	padding: 73px 0 65px 0;
 	background: #F6F6F6;
-	&__header{
-		font-weight: 700;
-		font-size: 30px;
-		text-align: center;
-		color: #0D0D0D;
-	}
+
 	&__wrapper {
 		display: flex;
 		justify-content: space-between;
@@ -27,7 +22,7 @@
 			margin-top: 0;
 		}
 	}
-	&__subheader {
+	&__subtitle {
 		margin-top: 35px;
 		font-weight: 700;
 		font-size: 18px;
