--- a/src/sass/blocks/style.scss
+++ b/src/sass/blocks/style.scss
@@ -8,6 +8,9 @@
 @import '../blocks/header';
 @import '../blocks/buttons';
 @import '../blocks/advantages';
+@import '../blocks/title';
+@import '../blocks/consultation';
+@import '../blocks/forms';
 @import '../base/media';
 
 .container {
