--- a/src/sass/blocks/style.scss
+++ b/src/sass/blocks/style.scss
@@ -11,9 +11,12 @@
 @import '../blocks/title';
 @import '../blocks/consultation';
 @import '../blocks/forms';
+@import '../blocks/carousel';
+@import '../blocks/catalogs';
 @import '../base/media';
 
 .container {
+	position: relative;
 	max-width: 950px;
 	margin: 0 auto;
 }
