section catalog ready

--- a/src/sass/blocks/_catalogs.scss
+++ b/src/sass/blocks/_catalogs.scss
@@ -31,16 +31,19 @@
             transform: skewX(25deg);
         }
         &_active {
-            color: #fff ;
-            background-color:  $main-color;
+            color: #fff;
+            background-color: $main-color;
             border: none;
         }
     }
     &__content {
         margin-top: 60px;
-        display: flex;
+        display: none;
         justify-content: space-between;
         flex-wrap: wrap;
+        &_active {
+            display: flex;
+        }
     }
     &-item {
         width: 300px;
