--- a/src/sass/blocks/style.scss
+++ b/src/sass/blocks/style.scss
@@ -13,6 +13,7 @@
 @import '../blocks/forms';
 @import '../blocks/carousel';
 @import '../blocks/catalogs';
+@import '../blocks/feed';
 @import '../base/media';
 
 .container {
