--- a/src/sass/blocks/style.scss
+++ b/src/sass/blocks/style.scss
@@ -14,6 +14,8 @@
 @import '../blocks/carousel';
 @import '../blocks/catalogs';
 @import '../blocks/feed';
+@import '../blocks/footer';
+@import '../blocks/modall';
 @import '../base/media';
 
 .container {
